accessible/base/EventQueue.cpp
@@ -49,18 +49,26 @@ bool EventQueue::PushEvent(AccEvent* aEvent) {
       (aEvent->mEventType == nsIAccessibleEvent::EVENT_NAME_CHANGE ||
        aEvent->mEventType == nsIAccessibleEvent::EVENT_TEXT_REMOVED ||
        aEvent->mEventType == nsIAccessibleEvent::EVENT_TEXT_INSERTED)) {
-    PushNameOrDescriptionChange(aEvent->mAccessible);
+    PushNameOrDescriptionChange(aEvent);
   }
   return true;
 }
 
-bool EventQueue::PushNameOrDescriptionChange(LocalAccessible* aTarget) {
+bool EventQueue::PushNameOrDescriptionChange(AccEvent* aOrigEvent) {
   // Fire name/description change event on parent or related LocalAccessible
   // being labelled/described given that this event hasn't been coalesced, the
   // dependent's name/description was calculated from this subtree, and the
   // subtree was changed.
-  const bool doName = aTarget->HasNameDependent();
-  const bool doDesc = aTarget->HasDescriptionDependent();
+  LocalAccessible* target = aOrigEvent->mAccessible;
+  // If the text of a text leaf changed without replacing the leaf, the only
+  // event we get is text inserted on the container. In this case, we might
+  // need to fire a name change event on the target itself.
+  const bool maybeTargetNameChanged =
+      (aOrigEvent->mEventType == nsIAccessibleEvent::EVENT_TEXT_REMOVED ||
+       aOrigEvent->mEventType == nsIAccessibleEvent::EVENT_TEXT_INSERTED) &&
+      nsTextEquivUtils::HasNameRule(target, eNameFromSubtreeRule);
+  const bool doName = target->HasNameDependent() || maybeTargetNameChanged;
+  const bool doDesc = target->HasDescriptionDependent();
   if (!doName && !doDesc) {
     return false;
   }
@@ -69,11 +77,11 @@ bool EventQueue::PushNameOrDescriptionChange(LocalAccessible* aTarget) {
   // Only continue traversing up the tree if it's possible that the parent
   // LocalAccessible's name (or a LocalAccessible being labelled by this
   // LocalAccessible or an ancestor) can depend on this LocalAccessible's name.
-  LocalAccessible* parent = aTarget;
+  LocalAccessible* parent = target;
   do {
     // Test possible name dependent parent.
     if (doName) {
-      if (nameCheckAncestor && parent != aTarget &&
+      if (nameCheckAncestor && (maybeTargetNameChanged || parent != target) &&
           nsTextEquivUtils::HasNameRule(parent, eNameFromSubtreeRule)) {
         nsAutoString name;
         ENameValueFlag nameFlag = parent->Name(name);
